<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sirus.myapplication.RegisterActivity">

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="Registreren"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="86dp"
        tools:text="@string/firstname_placeholder" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:text="TextView"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="146dp"
        tools:text="@string/lastname_placeholder" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:text="@string/email_placeholder"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="266dp"
        tools:text="@string/password_placeholder" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="326dp"
        tools:text="@string/passwordagain2_placeholder" />

    <Button
        android:id="@+id/button4"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:text="Meld aan"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="388dp" />

</android.support.constraint.ConstraintLayout>
